force-app/main/default/objects/Contract/fields/Assigned_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Headcount__c</fullName>
    <description>Total Number of Personnel Assigned to Project Not Including Fixed Sub Contracts</description>
    <formula>Sub_Count__c  +  Direct_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>