force-app/main/default/objects/Contract/fields/Assigned_Headcount_Cost__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Headcount_Cost__c</fullName>
    <description>Total Cost of Headcount Including Subcontractors</description>
    <formula>Direct_Count_Cost__c  +  Sub_Count_Cost__c  +  Sub_K_Fixed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Headcount Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>