force-app/main/default/objects/Contract/fields/B3_Project__c.field-meta.xml
<CustomField>
    <fullName>B3_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B3 Project</label>
    <referenceTo>B3_Project__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>