force-app/main/default/objects/Contract/fields/Base_Period__c.field-meta.xml
<CustomField>
    <fullName>Base_Period__c</fullName>
    <description>Guaranteed period of performance for project/contract</description>
    <label>Base Period</label>
    <type>Date</type>
</CustomField>