force-app/main/default/objects/Contract/fields/CLIN__c.field-meta.xml
<CustomField>
    <fullName>CLIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLIN</label>
    <referenceTo>CLIN__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>