force-app/main/default/objects/Contract/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deliverable</label>
    <referenceTo>Deliverable__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>