force-app/main/default/objects/Contract/fields/Direct_Count__c.field-meta.xml
<CustomField>
    <fullName>Direct_Count__c</fullName>
    <label>Direct Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>