force-app/main/default/objects/Contract/fields/FFP__c.field-meta.xml
<CustomField>
    <fullName>FFP__c</fullName>
    <label>FFP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>