force-app/main/default/objects/Contract/fields/Obligated__c.field-meta.xml
<CustomField>
    <fullName>Obligated__c</fullName>
    <label>Obligated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>