force-app/main/default/objects/Contract/fields/Option_Period_3__c.field-meta.xml
<CustomField>
    <fullName>Option_Period_3__c</fullName>
    <description>Dates of which the base period can be extended to, broaden scope with each option period</description>
    <label>Option Period 3</label>
    <type>Date</type>
</CustomField>