force-app/main/default/objects/Contract/fields/Optional_Task_1__c.field-meta.xml
<CustomField>
    <fullName>Optional_Task_1__c</fullName>
    <description>Optional contract task that can be exercised during the period of performance (POP)</description>
    <label>Optional Task 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>