force-app/main/default/objects/Contract/fields/Project_Contract__c.field-meta.xml
<CustomField>
    <fullName>Project_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Contract</label>
    <referenceTo>B3_Project__c</referenceTo>
    <relationshipLabel>Contracts (Project Contract)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>