force-app/main/default/objects/Contract/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <description>Statement Of Work</description>
    <label>SOW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>