force-app/main/default/objects/Contract/fields/Sub_Count__c.field-meta.xml
<CustomField>
    <fullName>Sub_Count__c</fullName>
    <label>Sub Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>