force-app/main/default/objects/Contract/fields/Sub_Count_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sub_Count_Cost__c</fullName>
    <label>Sub Count Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>