force-app/main/default/objects/Contract/fields/Sub_K_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Sub_K_Fixed__c</fullName>
    <label>Sub K Fixed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>